--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.css
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.css
@@ -4,6 +4,8 @@
   height: 80px;
   align-items: flex-end;
   padding-bottom: 15px;
+  
+
 }
 .text-box {
   display: flex;
@@ -21,3 +23,17 @@
     display: none;
   }
 }
+
+button {
+  width: 110px;
+  height: 35px;
+  font-size: 14px;
+}
+
+i {
+  font-size: 13px;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+
