--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
@@ -8,10 +8,12 @@
   border-top-right-radius: 10px;
   overflow-y: auto;
   padding: 40px;
+  
 }
 .stepper-buttons {
   display: flex;
   justify-content: space-between;
+ 
   height: 80px;
 }
 .stepper-buttons button {
@@ -20,9 +22,21 @@
 .stepper {
   width: calc(100% - 252px);
   padding: 0 50px;
+ 
 }
 @media (max-width: 1000px) {
   .stepper {
     display: none;
   }
+}
+
+button{
+  width: 110px;
+  height: 35px;
+}
+
+i{
+  font-size: 13px;
+  margin-left: 3px;
+  margin-right: 3px;
 }
