--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -21,12 +21,13 @@
       <h1>Envie seus documentos</h1>
       <div
         class="white-background"
-        *ngIf="nonComplicanceService.nc.attachments.length == 0"
+        *ngIf="nonComplicanceService.fileNc.length == 0"
       >
         <input
           type="file"
+          accept=".pdf,image/jpeg,image/png"
           class="input-attachment"
-          (change)="onUploadNc($event)"
+          (change)="onUpload($event, 'evidenciasNc')"
           multiple
         />
         <i class="pi pi-cloud-upload"></i>
@@ -36,12 +37,16 @@
       </div>
       <div
         class="white-background-files"
-        *ngIf="nonComplicanceService.fileNc.length != 0"
+        *ngIf="returnFiles('evidenciasNc').length != 0"
       >
-        <button type="button" (click)="clearFileNameNc()" class="btn btn-light">
+        <button
+          type="button"
+          (click)="clearFileName('evidenciasNc')"
+          class="btn btn-light"
+        >
           <i class="pi pi-replay"></i>
         </button>
-        <p *ngFor="let files of returnEvidenciasFile()">
+        <p *ngFor="let files of returnFiles('evidenciasNc')">
           {{ files.name }}
         </p>
       </div>
@@ -77,8 +82,9 @@
       >
         <input
           type="file"
+          accept=".pdf,image/jpeg,image/png"
           class="input-attachment"
-          (change)="onUploadAcoes($event)"
+          (change)="onUpload($event, 'evidenciasAcoes')"
           multiple
         />
         <i class="pi pi-cloud-upload"></i>
@@ -88,16 +94,16 @@
       </div>
       <div
         class="white-background-files"
-        *ngIf="nonComplicanceService.fileAcoes.length != 0"
+        *ngIf="returnFiles('evidenciasAcoes').length != 0"
       >
         <button
           type="button"
-          (click)="clearFileNameAcoes()"
+          (click)="clearFileName('evidenciasAcoes')"
           class="btn btn-light"
         >
           <i class="pi pi-replay"></i>
         </button>
-        <p *ngFor="let files of returnAcoesFile()">
+        <p *ngFor="let files of returnFiles('evidenciasAcoes')">
           {{ files.name }}
         </p>
       </div>
