--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -79,11 +79,11 @@
         (completeMethod)="search($event)"
         (onSelect)="onSelected()"
         (ngModelChange)="onChangeAutoComplete()"
-        field="corporate_name"
         [style]="{ width: '100%' }"
         [inputStyle]="{ width: '100%' }"
         class="p-autocomplete"
         placeholder="Busque por código SAP ou razão social..."
+        field="name"
       >
         <ng-template let-brand pTemplate="item">
           <div>
@@ -129,10 +129,10 @@
     <h1 *ngIf="!isInterno()">Razão Social</h1>
     <h1 *ngIf="isInterno()">Setor</h1>
     <p>
-      {{ nonComplicanceService.selected.corporate_name }}
+      {{ nonComplicanceService.nc.partner.corporate_name }}
     </p>
     <p>
-      {{ nonComplicanceService.selected.name }}
+      {{ nonComplicanceService.nc.partner.name }}
     </p>
   </div>
   <div class="dados-parceiro col">
@@ -154,7 +154,7 @@
           <span class="info-titulo">Nome</span>
           <br />
           <span class="info-dados">{{
-            nonComplicanceService.selected.responsible_name
+            nonComplicanceService.nc.partner.responsible_name
           }}</span>
         </div>
       </div>
@@ -164,7 +164,7 @@
           <span class="info-titulo">Telefone</span>
           <br />
           <span class="info-dados">{{
-            nonComplicanceService.selected.responsible_phone
+            nonComplicanceService.nc.partner.responsible_phone
           }}</span>
         </div>
       </div>
@@ -174,7 +174,7 @@
           <span class="info-titulo">E-mail</span>
           <br />
           <span class="info-dados">{{
-            nonComplicanceService.selected.responsible_email
+            nonComplicanceService.nc.partner.responsible_email
           }}</span>
         </div>
       </div>
