--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
@@ -1,53 +1,29 @@
 <div class="content">
-  <h3>Ponto de Controle</h3>
   <div *ngIf="!nonComplicanceService.hasSelectedProduct">
+    <h3>Ponto de Controle</h3>
     <app-waiting-product></app-waiting-product>
   </div>
   <div *ngIf="nonComplicanceService.hasSelectedProduct">
     <div class="content">
       <div class="text-box">
-        <span class=""
-          >Selecione a opção desejada e o número referente. Visualize a
-          documentação se necessário.</span
-        >
-        <div class="input-box mt-3">
-          <input type="text" pInputText placeholder="Selecione" />
-          <label for="numberController" class="mb-2 mt-3"
-            >Número de Controle</label
-          >
-          <input
-            name="numberController"
-            type="text"
-            pInputText
-            placeholder="digite"
-          />
-          <label class="mb-2 mt-3">Anexar Documentos</label>
-          <div class="div-attachment">
-            <h1>Envie seus documentos</h1>
-            <div
-              class="white-background"
-              (change)="onUpload($event)"
-              *ngIf="fileName.length == 0"
-            >
-              <input type="file" class="input-attachment" multiple />
-              <i class="pi pi-cloud-upload"></i>
-              <p>
-                Arraste e solte ou <strong>navegue para escolher</strong> um
-                arquivo
-              </p>
-            </div>
-            <div class="white-background-files" *ngIf="fileName.length > 0">
-              <button type="button" (click)="clearFile()" class="btn btn-light">
-                <i class="pi pi-replay"></i>
-              </button>
-              <p *ngFor="let files of fileName">{{ files }}</p>
-            </div>
-          </div>
-          <div class="d-flex justify-content-center mt-3">
-            <button type="button" class="btn btn-dark">
-              Visualizar instrução de Trabalho
-            </button>
-          </div>
+        <div class="cabecalho">
+          <h1>Ponto de Controle</h1>
+          <p>
+            Selecione a opção desejada e o número referente. Visualize a
+            documentação se necessário.
+          </p>
+        </div>
+
+        <div class="dropdown">
+          <select [(ngModel)]="nonComplicanceService.nc.tipoControle">
+            <option value="" disabled selected hidden>Selecione...</option>
+            <option *ngFor="let op of controleOptions">
+              {{ op }}
+            </option>
+          </select>
+        </div>
+        <div class="mt-3">
+          <app-checkpoint-items></app-checkpoint-items>
         </div>
       </div>
     </div>
