--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -9,20 +9,15 @@
       </p>
     </div>
     <div class="button-box col-12 col-lg-4 mb-4 mb-lg-0">
-      <span>
+      <p class="att">
         <i class="pi pi-history"></i> ultima atualização:
-        {{ returnUpdateTime() }}</span
-      >
+        {{ returnUpdateTime() }}
+      </p>
       <a href="ncs/import" class="text-decoration-none">
-        <button
-          pButton
-          pRipple
-          type="button"
-          class="p-button-secondary"
-          label="Atualizar Cadastros"
-          icon="pi pi-download"
-          iconPos="right"
-        ></button>
+        <button pButton pRipple type="button" class="btn btn-dark">
+          Atualizar Cadastros
+          <i class="pi pi-download"></i>
+        </button>
       </a>
     </div>
   </div>
@@ -57,7 +52,7 @@
       <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
         <label for="amountNC">Quantidade de NC</label>
         <input
-          [(ngModel)]="nonComplicanceService.quantNc"
+          [(ngModel)]="nonComplicanceService.nc.quantNc"
           name="amountNC"
           type="text"
           pInputText
@@ -68,7 +63,7 @@
       <div class="d-flex flex-column inputs-sm my-auto">
         <label for="amountTotal">Quantidade Total</label>
         <input
-          [(ngModel)]="nonComplicanceService.quantTotal"
+          [(ngModel)]="nonComplicanceService.nc.quantTotal"
           name="amountTotal"
           type="text"
           pInputText
@@ -81,14 +76,14 @@
           name="ncType"
           label="Não conformidade real"
           value="val1"
-          [(ngModel)]="nonComplicanceService.radioButtonValue"
+          [(ngModel)]="nonComplicanceService.nc.radioValue"
         ></p-radioButton>
         <p-radioButton
           name="ncType"
           label="Não conformidade Potencial / Oportunidade de Melhoria"
           class="pt-2"
           value="val2"
-          [(ngModel)]="nonComplicanceService.radioButtonValue"
+          [(ngModel)]="nonComplicanceService.nc.radioValue"
         ></p-radioButton>
       </div>
     </div>
