--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,21 +1,10 @@
 <div class="content">
-  <h3>Ponto de Rejeição</h3>
   <div *ngIf="!nonComplianceService.hasSelectedProduct">
+    <h3>Ponto de Rejeição</h3>
     <app-waiting-product></app-waiting-product>
   </div>
 
   <div *ngIf="nonComplianceService.hasSelectedProduct" class="mt-3">
-    <span class=""
-      >Descreva o problema e porque esta NC esta sendo aberta.</span
-    >
-    <p-editor
-      [style]="{ height: '210px' }"
-      [(ngModel)]="nonComplianceService.textAreaRejectPoint"
-    ></p-editor>
-    <div class="d-flex justify-content-center mt-3">
-      <button type="button" class="btn btn-dark">
-        Visualizar Documento
-      </button>
-    </div>
+    <app-rejection-point-items></app-rejection-point-items>
   </div>
 </div>
