ajeita o step 1 da criação da proposta e implementa um service para guardar o que foi preechido

--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -17,44 +17,61 @@
         <div class="d-flex">
             <div class="col">
                 <label>Matéria Prima</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(1)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox1 + '</p><p>' + this.propService.step1.checkbox2 + '</p><p>' + this.propService.step1.checkbox3+ '</p>' + this.propService.step1.editor1" [style]="editorStyle" [readonly]="true" (click)="openDialog(1)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
 
             </div>
             <div class="col">
                 <label>Medição</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(2)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox4 + '</p><p>' + this.propService.step1.checkbox5 + '</p><p>' + this.propService.step1.checkbox6+ '</p>' + this.propService.step1.editor2" [style]="editorStyle" [readonly]="true" (click)="openDialog(2)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
             </div>
             <div class="col">
                 <label>Método</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(3)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="this.propService.step1.editor3" [style]="editorStyle" [readonly]="true" (click)="openDialog(3)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
             </div>
         </div>
         <img src="../../../../../../assets/images/Espinha de Peixe.png" width="900" class="ml-5 mr-3">
         <div class="d-flex">
             <div class="col">
                 <label>Mão de Obra</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(4)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox7 + '</p>' + this.propService.step1.editor4" [style]="editorStyle" [readonly]="true" (click)="openDialog(4)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
             </div>
             <div class="col">
                 <label>Meio Ambiente</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(5)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="this.propService.step1.editor5" [style]="editorStyle" [readonly]="true" (click)="openDialog(5)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
             </div>
             <div class="col">
                 <label>Máquina</label>
-                <textarea  pInputTextarea rows="5" cols="25" readonly class="textarea" (click)="openDialog(6)">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, est, quisquam?
-                </textarea>
+                <p-editor [ngModel]="this.propService.step1.editor6" [style]="editorStyle" [readonly]="true" (click)="openDialog(6)">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
 
             </div>
         </div>
     </div>
     <div class="d-block mt-5">
         <label>Efeito</label>
-        <textarea  pInputTextarea readonly rows="15" class="textarea">Texto do campo descreva a não conformidade.
-        </textarea>
+        <p-editor [ngModel]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur atque cupiditate debitis deleniti dicta distinctio dolor dolorum, explicabo fugit impedit minima, neque nisi praesentium provident sequi soluta tenetur. Aperiam.'"
+                  [style]="{'height':'300px','width':'230px','border': '2px solid #333333','border-radius': '5px'}"
+                  [readonly]="true"
+        >
+            <ng-template pTemplate="header">
+            </ng-template>
+        </p-editor>
     </div>
 </div>
