--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -5,20 +5,20 @@
         </h1>
         <p>Quando ocorre falta/excesso de insumos ou estes são de má qualidade.</p>
 
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Falta de Insumos</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox1" value="Falta de Insumos"></p-checkbox>
+            <label class="form-check-label ml-1">Falta de Insumos</label>
         </div>
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Excesso de Insumos</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox2" value="Excesso de Insumos"></p-checkbox>
+            <label class="form-check-label ml-1">Excesso de Insumos</label>
         </div>
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Matéria prima de má qualidade</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox3" value="Matéria prima de má qualidade"></p-checkbox>
+            <label class="form-check-label ml-1">Matéria prima de má qualidade</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor1">
         </p-editor>
     </div>
     <div *ngIf="stepPosition==2">
@@ -27,20 +27,20 @@
         </h1>
         <p>Quando há erros, falta ou excesso de parâmetros de inspeção, não atingimento de metas ou outras informações de medição.</p>
 
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Falta de Parâmetros</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox4" value="Falta de Parâmetros"></p-checkbox>
+            <label class="form-check-label ml-1">Falta de Parâmetros</label>
         </div>
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Excesso de Parâmetros</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox5" value="Excesso de Parâmetros"></p-checkbox>
+            <label class="form-check-label ml-1">Excesso de Parâmetros</label>
         </div>
-        <div class="form-check">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Não atingimento de metas</label>
+        <div class="form-check pl-0">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox6" value="Não atingimento de metas"></p-checkbox>
+            <label class="form-check-label ml-1">Não atingimento de metas</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor2">
         </p-editor>
     </div>
     <div *ngIf="stepPosition==3">
@@ -49,7 +49,7 @@
         </h1>
         <p>Quando há ausência de métodos formais ou estes são inadequados, incompletos, incorretos ou não foram divulgados adequadamente. Também se aplica quando: há falta de inspeção, ausência ou falha em sistemas automatizados, má gestão como um todo.</p>
 
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor3">
         </p-editor>
     </div>
     <div *ngIf="stepPosition==4">
@@ -57,11 +57,11 @@
             Mão de Obra
         </h1>
         <p>Quando o colaborador desrespeita procedimentos, desconhece a maneira correta de executar o trabalho (falta de treinamento), ou o faz de maneira inadequada (com pressa, imprudência, etc) ou descompromissada (falta de responsabilidade, motivação, etc).</p>
-        <div class="form-check my-2">
-            <p-checkbox [binary]="true"></p-checkbox>
-            <label class="form-check-label">Executar treinamento</label>
+        <div class="form-check pl-0 my-2">
+            <p-checkbox [(ngModel)]="this.propService.step1.checkbox7" value="Executar treinamento"></p-checkbox>
+            <label class="form-check-label ml-1">Executar treinamento</label>
         </div>
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor4">
         </p-editor>
     </div>
     <div *ngIf="stepPosition==5">
@@ -69,7 +69,7 @@
             Meio Ambiente
         </h1>
         <p class="mb-3">Quando o problema está relacionado a condições ambientais (poluição, temperatura, ruido, luminosidade, etc) ou a condições de infraestrutura (espaço físico, mobiliário, etc).</p>
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor5">
         </p-editor>
     </div>
     <div *ngIf="stepPosition==6">
@@ -78,12 +78,10 @@
         </h1>
         <p>Quando há ausência, obsolescência, má regulagem, quebra ou outros problemas com os equipamentos, inclusive de informática. Se aplica também nas falhas de manuntenção corretiva ou preventiva destes equipamentos.</p>
 
-        <p-editor [style]="{'height':'210px'}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.step1.editor6">
         </p-editor>
     </div>
 </div>
-
-
 <div class="d-flex justify-content-between mt-5">
     <button type="button"
             class="btn btn-outline-dark"
@@ -112,5 +110,4 @@
             <i class="bi bi-arrow-right"></i>
         </button>
     </div>
-
 </div>
