--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.css
@@ -97,7 +97,6 @@
   padding: 13px;
 }
 
-::ng-deep .ql-toolbar.ql-snow {
-  padding: 0px;
-  border: none;
+:host ::ng-deep .ql-toolbar.ql-snow {
+  display: none;
 }
