--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -61,7 +61,7 @@
   <div class="dropdown col">
     <label>Tipo de Parceiro</label>
     <select
-      [(ngModel)]="nonComplicanceService.nc.tiposParceiroItem"
+      [(ngModel)]="nonComplicanceService.nc.tipos_parceiro_item"
       (change)="onChange()"
     >
       <option value="" disabled selected hidden>Selecione...</option>
