--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="returnOpScreen()">
   <label for="NumOp">Número da OP</label>
   <input
-    [(ngModel)]="nonComplicanceService.nc.numOp"
+    [(ngModel)]="nonComplicanceService.nc.num_op"
     name="NumOp"
     type="text"
     pInputText
@@ -13,7 +13,7 @@
 <div *ngIf="returnNfScreen()">
   <label for="NumOp">Número da Nota</label>
   <input
-    [(ngModel)]="nonComplicanceService.nc.numNota"
+    [(ngModel)]="nonComplicanceService.nc.num_nota"
     name="NumOp"
     type="text"
     pInputText
