--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point-items/rejection-point-items.component.html
@@ -5,7 +5,7 @@
   </div>
   <p-editor
     [style]="{ height: '210px' }"
-    [(ngModel)]="nonComplianceService.nc.textAreaRejectPoint"
+    [(ngModel)]="nonComplianceService.nc.text_area_reject_point"
   ></p-editor>
 </div>
 
@@ -73,7 +73,7 @@
   <div class="d-flex flex-column inputs-sm my-auto">
     <label for="amountTotal">Número do Lote</label>
     <input
-      [(ngModel)]="nonComplianceService.nc.numLote"
+      [(ngModel)]="nonComplianceService.nc.num_lote"
       name="amountTotal"
       type="text"
       pInputText
@@ -84,7 +84,7 @@
   <div class="d-flex flex-column inputs-sm my-auto">
     <label for="amountTotal">Número da Ordem de Compra</label>
     <input
-      [(ngModel)]="nonComplianceService.nc.numOrdemCompra"
+      [(ngModel)]="nonComplianceService.nc.num_ordem_compra"
       name="amountTotal"
       type="text"
       pInputText
