ajeita o step 1, termina step 2 e 90% do step 3

--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.css
@@ -12,3 +12,11 @@ p {
     letter-spacing: 0.01em;
     color: #333333;
 }
+.p-autocomplete{
+    border-radius: 5px;
+    border: 2px solid rgb(51, 51, 51);
+}
+label {
+    font-size: 13px;
+    font-weight: bold;
+}
