--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -66,9 +66,10 @@
     </div>
     <div class="d-block mt-5">
         <label>Efeito</label>
-        <p-editor [ngModel]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aspernatur atque cupiditate debitis deleniti dicta distinctio dolor dolorum, explicabo fugit impedit minima, neque nisi praesentium provident sequi soluta tenetur. Aperiam.'"
+        <p-editor [ngModel]="this.propService.step1.editor7"
                   [style]="{'height':'300px','width':'230px','border': '2px solid #333333','border-radius': '5px'}"
                   [readonly]="true"
+                  (click)="openDialog(7)"
         >
             <ng-template pTemplate="header">
             </ng-template>
